Release 1.2.0 (unreleased)
==========================


Release 1.1.2 (2019-05-19)
==========================

* #6380: sphinxcontrib-websupport doesn't work with Sphinx 2.0


Release 1.1.1 (2019-03-21)
==========================

* #6190: sphinxcontrib-websupport doesn't work with Sphinx 2.0.0b1

Release 1.1.0 (2018-06-05)
==========================

* #6 Add compatibility with Sphinx 1.6. Thanks to Dmitry Shachnev.
* #13 Support testing with Sphinx-1.7.
* #9 Include license file in the generated wheel package. Thanks to
  Jon Dufresne.

Release 1.0.1 (2017-05-07)
==========================

* Make sqlalchemy and whoosh as optional dependency

Release 1.0.0 (2017-04-23)
==========================

* Initial release (copied from sphinx package)