@@ -9,10 +9,6 @@ env:
     - PYTHONWARNINGS=all
 matrix:
   include:
-    - python: '2.7'
-      env: TOXENV=py27
-    - python: '3.4'
-      env: TOXENV=py34
     - python: '3.5'
       env: TOXENV=py35
     - python: '3.6'
@@ -23,8 +19,6 @@ matrix:
     - python: '3.8'
       dist: xenial
       env: TOXENV=py38
-    - python: '3.6'
-      env: TOXENV=sphinx20
     - python: '3.7'
       dist: xenial
       env: TOXENV=flake8
