@@ -11,7 +11,6 @@ extras_require = {
     # Environment Marker works for wheel 0.24 or later
     'test': [
         'pytest',
-        'mock',  # it would be better for 'test:python_version in 2.7'
     ],
 }
 
@@ -48,10 +47,7 @@ setup(
         'License :: OSI Approved :: BSD License',
         'Operating System :: OS Independent',
         'Programming Language :: Python',
-        'Programming Language :: Python :: 2',
-        'Programming Language :: Python :: 2.7',
         'Programming Language :: Python :: 3',
-        'Programming Language :: Python :: 3.4',
         'Programming Language :: Python :: 3.5',
         'Programming Language :: Python :: 3.6',
         'Programming Language :: Python :: 3.7',
@@ -63,7 +59,7 @@ setup(
         'Topic :: Utilities',
     ],
     platforms='any',
-    python_requires=">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*",
+    python_requires=">=3.5",
     packages=find_packages(exclude=['tests']),
     include_package_data=True,
     extras_require=extras_require,
