@@ -1,5 +1,5 @@
 [tox]
-envlist=flake8,py27,py34,py35,py36,py37
+envlist=flake8,py35,py36,py37
 
 [testenv]
 deps=
@@ -16,24 +16,11 @@ setenv =
 commands=
     {envpython} -m pytest tests/ {posargs}
 
-[testenv:sphinx20]
-deps=
-    six
-    pytest
-    sqlalchemy
-    whoosh
-    mock
-    Sphinx>=2.0.0b1
-
 [testenv:flake8]
 deps=
     flake8
 commands=
     flake8
-
-[testenv:py27]
-deps=
-    {[testenv]deps}
 
 [testenv:py35]
 # download setuptools and pip on creating virtualenv (for Travis CI)
