@@ -1,6 +1,7 @@
 Release 1.2.0 (unreleased)
 ==========================
 
+* Drop python2.7 and 3.4 support
 
 Release 1.1.2 (2019-05-19)
 ==========================
